<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="str_email">Email</string>
    <string name="str_email_hint">Please enter your email</string>
    <string name="str_password">Password</string>
    <string name="str_password_hint">Please enter your password</string>
    <string name="str_sign_in">Login</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_instruction_title">How to add new shoe</string>
    <string name="str_instruction_text">Firstly press the add button (the red add sign in bottom-right corner)
        and then just add some details for each shoe, like name of company, size and any more details</string>
    <string name="str_next">Next</string>
    <string name="str_welcome_title">Welcome to Shoe Store</string>
    <string name="str_welcome_text">This is a shoe store app just for you! you can add all your
        items and access them later through your account!</string>
    <string name="str_logout">logout</string>
    <string name="str_add">add</string>

    <string name="str_shoe_name">Shoe Name</string>
    <string name="str_shoe_name_hint">Please enter shoe name</string>
    <string name="str_company">Company Name</string>
    <string name="str_company_hint">Please enter company name</string>
    <string name="str_shoe_size">Shoe Size</string>
    <string name="str_shoe_size_hint">Please enter shoe size</string>
    <string name="str_description">Description</string>
    <string name="str_description_hint">A short description of shoe</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_save">Save</string>
    <string name="str_image">image</string>
</resources>
