<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.screens.shoedetails.ShoeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shoe_name_text"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/str_shoe_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/shoe_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:autofillHints=""
                android:hint="@string/str_shoe_name_hint"
                android:inputType="text"
                android:text="@={shoe.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

            <TextView
                android:id="@+id/company_name_text"
                android:layout_width="0dp"
                style="@style/title_style"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/str_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />

            <EditText
                android:id="@+id/company_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:autofillHints=""
                android:hint="@string/str_company_hint"
                android:inputType="text"
                android:text="@={shoe.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_name_text" />

            <TextView
                android:id="@+id/shoe_size_text"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/str_shoe_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_name_edit" />

            <EditText
                android:id="@+id/shoe_size_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/str_shoe_size_hint"
                android:inputType="numberDecimal"
                android:labelFor="@+id/shoe_size_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />

            <TextView
                android:id="@+id/shoe_description_text"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/str_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit" />

            <EditText
                android:id="@+id/shoe_description_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:autofillHints=""
                android:gravity="start|top"
                android:hint="@string/str_description_hint"
                android:inputType="textMultiLine"
                android:text="@={shoe.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_description_text" />

            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:text="@string/str_save"
                android:onClick="@{() -> shoeViewModel.addShoe(shoe)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancel_detail_button"
                app:layout_constraintStart_toStartOf="@+id/shoe_description_edit" />

            <Button
                android:id="@+id/cancel_detail_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="@dimen/layout_margin"
                android:text="@string/str_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/shoe_description_edit"
                app:layout_constraintStart_toEndOf="@+id/save_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>