<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeModel"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:textAlignment="center"
        tools:context=".screens.instruction.InstructionFragment">

        <TextView
            android:id="@+id/shoe_detail_name"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@={shoeModel.name}"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/str_shoe_name" />

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:text="@string/str_shoe_name_hint"
            app:layout_constraintEnd_toEndOf="@+id/shoe_detail_name"
            app:layout_constraintStart_toStartOf="@+id/shoe_detail_name"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_name" />

        <TextView
            android:id="@+id/shoe_detail_company"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@={shoeModel.company"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text"
            tools:text="@string/str_company" />

        <TextView
            android:id="@+id/shoe_detail_company_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:text="@string/str_company_hint"
            app:layout_constraintEnd_toEndOf="@+id/shoe_detail_company"
            app:layout_constraintStart_toStartOf="@+id/shoe_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_company" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginStart="8dp"
            android:text="@string/str_image"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_detail_company_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shoe_detail_name"
            app:srcCompat="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>