<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/ic_list_background"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:textAlignment="center"
        tools:context=".screens.instruction.InstructionFragment">

        <TextView
            android:id="@+id/shoe_detail_name"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:text="@string/str_shoe_name"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/roboto"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_detail_name"
            app:layout_constraintStart_toStartOf="@+id/shoe_detail_name"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_name"
            tools:text="@string/str_shoe_name_hint" />

        <TextView
            android:id="@+id/shoe_detail_company"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:text="@string/str_company"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <TextView
            android:id="@+id/shoe_detail_company_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_detail_company"
            app:layout_constraintStart_toStartOf="@+id/shoe_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_company"
            tools:text="@string/str_company_hint" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/small_margin"
            android:background="@drawable/ic_shoe_background"
            android:padding="@dimen/small_margin"
            android:text="@string/str_image"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_detail_company_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shoe_detail_name"
            app:srcCompat="@drawable/ic_shoe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>